# uTox

./: meson.build
src/: meson.build
src/av/: meson.build
src/layout/: meson.build
src/native/: meson.build
src/ui/: meson.build
src/xlib/: meson.build
